# chess

./: LICENSE  README.md  build.py  chess_game.py  chess_multiplayer.py  main.py  nuitka-crash-report.xml  pyproject.toml  quick_build.py  test_chess.py
.github/workflows/: auto-release.yml  release.yml  simple-release.yml
