[project]
name = "professional-chess-game"
version = "1.0.6"
description = "A high-performance, memory-efficient Chess game implementation with modern GUI"
readme = "README.md"
authors = [
    {name = "Chess Game Developer", email = "developer@chessgame.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "nuitka>=2.8.4",
    "ordered-set>=4.1.0",
]
keywords = ["chess", "game", "gui", "tkinter", "ai", "multiplayer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/eminsk/chess"
Repository = "https://github.com/eminsk/chess.git"
Issues = "https://github.com/eminsk/chess/issues"
Documentation = "https://github.com/eminsk/chess#readme"

[project.scripts]
chess-game = "main:main"
chess-single = "chess_game:main"
chess-multi = "chess_multiplayer:main"
